fix broken layout at 1440-1024px

--- a/blocks/product/__text/product__text.css
+++ b/blocks/product/__text/product__text.css
@@ -1,3 +1,4 @@
 .product__text {
-  width: 475px;
+  max-width: 475px;
+  min-width: 208px;
 }
